# tauri-react-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/: index.html
src/: App.css  App.test.tsx  App.tsx  base.css  button.css  icons.css  index.css  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: application.rs  error.rs  main.rs
src-tauri/src/config/: config.rs  config_plugin.rs  mod.rs
src-tauri/src/database/: mod.rs  query.rs  workspace.rs
src-tauri/src/dialog/: mod.rs
src-tauri/src/setup/: mod.rs
src/compenent/appbody/: appbody.css  appbody.tsx
src/compenent/capture-input/: capture-input.css  capture-input.tsx
src/compenent/gridimage/: gridimage.css  gridimage.tsx
src/compenent/history/: history.css  history.tsx  historycard.css  historycard.tsx  workspace.ts
src/compenent/home/: home.css  home.test.tsx  home.tsx
src/compenent/modal/: modal.css  modal.tsx
src/compenent/new-project/: new-project.tsx  newproject.css
src/compenent/statusbar/: statusbar.css  statusbar.test.tsx  statusbar.tsx
src/compenent/workspace/: workspace.tsx
src/state/: store.ts
src/state/features/: navigationSlice.ts  themeSlice.ts  workspaceSlice.ts
src/styles/: base.css  button.css  icons.css
src/ui/home/: home.css  home.test.tsx  home.tsx
src/ui/new-project/: new-project.tsx  newproject.css  newproject.test.tsx
src/ui/workspace/: workspace.tsx
