[package]
name = "tauri-react-app"
version = "0.1.1"
description = "A Tauri App Template"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["dialog"] }
sqlx = { version = "0.5.9", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.9", features = [ "sync" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
